# Problema de creacion

--- a/Practica3/FileStore/Resource.resx
+++ b/Practica3/FileStore/Resource.resx
@@ -119,6 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="BaseModel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\[MYS1]ModeloBase_P37.spfx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Resources\BaseModel.spfx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
