--- a/Practica3/FileStore/Resource.resx
+++ b/Practica3/FileStore/Resource.resx
@@ -121,4 +121,7 @@
   <data name="BaseModel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\BaseModel.spfx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Coordinates" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Coordinates.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
